# enum-ordinalize

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci-version.yml  ci.yml
enum-ordinalize/: Cargo.toml  README.md
enum-ordinalize-derive/: Cargo.toml
enum-ordinalize-derive/src/: big_int_wrapper.rs  int128.rs  int_wrapper.rs  lib.rs  panic.rs
enum-ordinalize/src/: lib.rs  traits.rs
enum-ordinalize/tests/: derive.rs  derive_advanced.rs  derive_impl_trait_false.rs  derive_nightly.rs  derive_variants.rs  derive_variants_trait.rs  impl_from_ordinal.rs  impl_from_ordinal_unsafe.rs  impl_ordinal.rs  impl_values.rs  impl_variant_count.rs  impl_variants.rs
src/: big_int_wrapper.rs  lib.rs  macros.rs  panic.rs  variant_type.rs
tests/: macro.rs  macros.rs  macros_128.rs  tests.rs  tests_128.rs  tests_advanced.rs
