[package]
name = "enum-ordinalize"
version = "3.0.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/enum-ordinalize"
homepage = "https://magiclen.org/enum-ordinalize"
keywords = ["enum", "ordinal", "ordinalize", "number"]
categories = ["data-structures", "no-std"]
description= "This crates provides a procedural macro to let enums not only get its variants' ordinal but also be constructed from an ordinal."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/enum-ordinalize"
branch = "master"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = "1"
quote = "1"

num-traits = "0.2"
num-bigint = "0.2"

[features]
nightly-test = []