[package]
name = "enum-ordinalize-derive"
version = "4.2.0"
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/magiclen/enum-ordinalize"
homepage = "https://magiclen.org/enum-ordinalize"
keywords = ["enum", "ordinal", "ordinalize", "number"]
categories = ["no-std", "rust-patterns"]
description = "This crate provides a procedural macro that enables enums to not only obtain the ordinal values of their variants but also allows for the construction of enums from an ordinal value."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"

num-traits = "0.2"
num-bigint = "0.4"

[features]
default = ["traits"] # traits should not be default in the future

traits = []